# sphinx-source-tree

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  SECURITY.rst  conftest.py  pyproject.toml  sphinx_source_tree.py  test_sphinx_source_tree.py
.github/workflows/: test.yml  test_unstable.yml
docs/: conf.py  documentation.rst  full-llms.rst  llms.rst  package.rst  requirements.txt  source_tree.rst  sphinx_source_tree.rst
